--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Laudo Checker",
-  "version": "1.0",
+  "version": "2.1",
   "description": "Checa as alterações que devem ser adicionadas em um Hemograma. Por enquanto suporta checagem do Leucograma e Plaquetograma.",
   "content_scripts": [
     {
@@ -9,7 +9,9 @@
         "*://renatofreire.sisvida.com.br/laboratorio/resultados/conferir_exame/*"
       ],
       "js": [
-        "extension_core.js"
+        "index.js",
+        "interpreter.js",
+        "swal_min.js"
       ]
     }
   ]
